--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/my_app_db?serverTimezone=UTC&u
 spring.datasource.username=admin
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
