--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
+spring.profiles.active=test,local
