--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -13,4 +13,4 @@ spring.data.redis.port=6379
 #cerebra.signing-key=test-signing-key-256-bit-test-signing-key-256-bit
 #cerebra.access-token-expiration=1000
 
-spring.profiles.active=test
+spring.profiles.active=test,local
