--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,13 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
 spring.profiles.active=test,local
+
+# File Storage Configuration
+app.storage.path=${STORAGE_PATH:tmp/cerebra-storage}
+app.storage.max-file-size=100MB
+app.storage.max-request-size=100MB
+
+# Multipart Configuration
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
+spring.servlet.multipart.enabled=true
