--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,9 @@ app.storage.path=${STORAGE_PATH:tmp/cerebra-storage}
 app.storage.max-file-size=100MB
 app.storage.max-request-size=100MB
 
+# Share Link Configuration
+app.base-url=${BASE_URL:http://localhost:8080}
+
 # Multipart Configuration
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
