add share functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.data.redis.port=6379
 spring.profiles.active=test,local
 
 # File Storage Configuration
-app.storage.path=${STORAGE_PATH:tmp/cerebra-storage}
+app.storage.path=${STORAGE_PATH:target/tmp/cerebra-storage}
 app.storage.max-file-size=100MB
 app.storage.max-request-size=100MB
 
