--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,16 +1,14 @@
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=MySQL
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
-spring.jpa.hibernate.ddl-auto=validate
+spring.datasource.url=jdbc:tc:mysql:8.0.36:///testdb
+spring.datasource.username=testuser
+spring.datasource.password=testpass
+
+spring.datasource.driver-class-name=org.testcontainers.jdbc.ContainerDatabaseDriver
+spring.test.database.replace=none
+
 spring.jpa.show-sql=false
 spring.flyway.enabled=true
 
-# Redis: disable real connection by providing localhost default; tests will mock RedisTemplate users
-spring.data.redis.host=localhost
-spring.data.redis.port=6379
 
-#cerebra.signing-key=test-signing-key-256-bit-test-signing-key-256-bit
-#cerebra.access-token-expiration=1000
+spring.profiles.active=test,default
 
-spring.profiles.active=test,local
+app.storage.path=target/tmp/cerebra-storage
