--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,6 @@ springdoc.swagger-ui.filter=true
 springdoc.swagger-ui.displayRequestDuration=true
 springdoc.swagger-ui.showExtensions=true
 springdoc.swagger-ui.showCommonExtensions=true
+springdoc.swagger-ui.doc-expansion=none
+springdoc.swagger-ui.default-models-expand-depth=1
+springdoc.swagger-ui.default-model-expand-depth=1
