--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,38 @@ spring.datasource.username=admin
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# HikariCP Connection Pool Configuration
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.max-lifetime=1200000
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.pool-name=CerebraTaskPool
+spring.datasource.hikari.leak-detection-threshold=60000
+spring.datasource.hikari.validation-timeout=3000
+spring.datasource.hikari.connection-test-query=SELECT 1
+spring.datasource.hikari.auto-commit=true
+spring.datasource.hikari.keep-alive-time=0
+spring.datasource.hikari.register-mbeans=true
+
+# Connection Pool Monitoring and Health Checks
+management.endpoints.web.exposure.include=health,info,metrics,hikaricp
+management.endpoint.health.show-details=when-authorized
+management.metrics.export.simple.enabled=true
+management.metrics.export.simple.step=30s
+
+# JPA/Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.jdbc.batch_size=20
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
+spring.jpa.properties.hibernate.connection.provider_disables_autocommit=true
+
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
 spring.profiles.active=test,local
