add api documentation with readme.md

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,9 @@ spring.datasource.hikari.keep-alive-time=0
 spring.datasource.hikari.register-mbeans=true
 
 # Connection Pool Monitoring and Health Checks
-management.endpoints.web.exposure.include=health,info,metrics,hikaricp
+management.endpoints.web.exposure.include=health
+# application.properties
+
 management.endpoint.health.show-details=when-authorized
 management.metrics.export.simple.enabled=true
 management.metrics.export.simple.step=30s
@@ -39,7 +41,7 @@ spring.jpa.properties.hibernate.connection.provider_disables_autocommit=true
 
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
-spring.profiles.active=test,local
+spring.profiles.active=default
 
 # File Storage Configuration
 app.storage.path=${STORAGE_PATH:target/tmp/cerebra-storage}
