--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,13 +19,12 @@ spring.datasource.hikari.auto-commit=true
 spring.datasource.hikari.keep-alive-time=0
 spring.datasource.hikari.register-mbeans=true
 
+
 # Connection Pool Monitoring and Health Checks
 management.endpoints.web.exposure.include=health
 # application.properties
 
 management.endpoint.health.show-details=when-authorized
-management.metrics.export.simple.enabled=true
-management.metrics.export.simple.step=30s
 
 # JPA/Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=none
@@ -37,7 +36,7 @@ spring.jpa.properties.hibernate.jdbc.batch_size=20
 spring.jpa.properties.hibernate.order_inserts=true
 spring.jpa.properties.hibernate.order_updates=true
 spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
-spring.jpa.properties.hibernate.connection.provider_disables_autocommit=true
+#spring.jpa.properties.hibernate.connection.provider_disables_autocommit=true
 
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
